--- a/test_dmp/homepage/templates/events.edit.html
+++ b/test_dmp/homepage/templates/events.edit.html
@@ -4,7 +4,7 @@
 
 <%block name="content">
 
-<h2>Edit Event: ${event.event_name}</h2>
+<h2>Edit Event: ${event.name}</h2>
 	<form class= "edit_table" method = "POST" >
 
 		## <table id="edit_form">
