User Story 06 Create Festival Specific Pages
Completed User Story 6, Create Festival Pages
To Enhance (if time): Product list,
products connected to artisan,
event specific areas,
product list wrapping

--- a/test_dmp/homepage/styles/basefestival.css
+++ b/test_dmp/homepage/styles/basefestival.css
@@ -80,6 +80,7 @@ a:active {
     text-decoration: none;
 }
 
-#festivalproduct {
-  display: inline-block;
+#festivalcontainer{
+  padding: 15px;
 }
+
