User Story 07 Include Artisan Products 1 Hour
Created a product list on the area page so that they can see artisan
products.
To enhance (if time):
Need to work out the wrapping
sort product by artisan/type
not able to add to shopping cart
overall design/feel

--- a/test_dmp/homepage/templates/festivals.area.html
+++ b/test_dmp/homepage/templates/festivals.area.html
@@ -15,7 +15,16 @@
 			<div class="row">
         		<div class="col-xs-12 bg-default">
 				
-        	
+        	<h2>Products</h2>
+			%for product in products:
+				<div id="festivalproduct" class="item_container col-xs-2">
+						<a href="/homepage/productlist.viewproduct/${ product.id }/">
+							<div id="product" class="">${ product.name }</div>
+							<img width = "100%" src="${STATIC_URL}homepage/media/${ product.photo }"/>
+								<div id="current_price" class="">$${ product.current_price }</div>
+					</a>
+				</div>
+			%endfor
 		</div>
 	</div>
 </%block>
