User Story 12 Email Receipt to Users 2 hours
This emails a confirmation to users. It doesn't pass the shopping cart
or the purchase info.
To enhance (if time):
Pass the Shopping Cart
Style the email
Pass the amount

--- a/test_dmp/homepage/templates/checkout.html
+++ b/test_dmp/homepage/templates/checkout.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Checkout</title>
+  </%block>
+
 <%block name="content">
 	<h2>Enter Checkout Information</h2>
 			<form>
@@ -21,7 +25,7 @@
 				<input type="text" name="Zip">
 				<br>
 			</form><br>
-			<a class="btn btn-success" href="/homepage/receipt">Complete Purchase</a>
+			<a class="btn btn-success" href="/homepage/checkout.receipt">Complete Purchase</a>
 			<a class="btn btn-default" href="/homepage/productlist">Cancel</a>
 </%block>
 
