--- a/test_dmp/homepage/templates/events.edit.html
+++ b/test_dmp/homepage/templates/events.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Events</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit Event: ${event.name}</h2>
