--- a/test_dmp/homepage/templates/festivals.area.html
+++ b/test_dmp/homepage/templates/festivals.area.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Festival Areas</title>
+  </%block>
+
 <%block name="content">
 	<div id="festivalcontainer">
 		<h2>Area </h2>
