--- a/test_dmp/homepage/templates/index.html
+++ b/test_dmp/homepage/templates/index.html
@@ -3,6 +3,10 @@
 <%block name="jumbotron">
 </%block>
 
+<%block name="title">
+    <title>CHF: Homepage</title>
+  </%block>
+
 <div padding-bottom: 25px;>
 <%block name="content">
     
