--- a/test_dmp/homepage/templates/login.html
+++ b/test_dmp/homepage/templates/login.html
@@ -3,6 +3,10 @@
 <%block name="jumbotron">
 </%block>
 
+<%block name="title">
+    <title>CHF: Login</title>
+  </%block>
+
 <%block name="content">
   <div class = "text-left">
     <h2>Whoa there Pardner!</h2>
