--- a/test_dmp/homepage/templates/login.loginform.html
+++ b/test_dmp/homepage/templates/login.loginform.html
@@ -2,6 +2,10 @@
 
 <%block name="content">
 
+<%block name="title">
+    <title>CHF: Login</title>
+  </%block>
+
   <div id= "loginform_container" align="center">
     <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
       <table>
