--- a/test_dmp/homepage/templates/logout.html
+++ b/test_dmp/homepage/templates/logout.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Log Out</title>
+  </%block>
+
 <%block name="content">
 
   <div class = "text-left">
