--- a/test_dmp/homepage/templates/orders.edit.html
+++ b/test_dmp/homepage/templates/orders.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Orders</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit Order: ${ order.tracking_number }</h2>
