--- a/test_dmp/homepage/templates/productlist.html
+++ b/test_dmp/homepage/templates/productlist.html
@@ -1,5 +1,9 @@
 <%inherit file="base.htm"/>
 
+<%block name="title">
+    <title>CHF: Products</title>
+  </%block>
+
 <%block name="content">
 <h2>Products</h2>
 	%for product in products:
