--- a/test_dmp/homepage/templates/productlist.viewproduct.html
+++ b/test_dmp/homepage/templates/productlist.viewproduct.html
@@ -1,5 +1,9 @@
 <%inherit file="base.htm"/>
 
+<%block name="title">
+    <title>CHF: Product Detail</title>
+  </%block>
+
 <%block name="jumbotron">
 </%block>
 
