--- a/test_dmp/homepage/templates/rentals.edit.html
+++ b/test_dmp/homepage/templates/rentals.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Rentals</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit Rental for: ${ rental.user }</h2>
