--- a/test_dmp/homepage/templates/rentals.html
+++ b/test_dmp/homepage/templates/rentals.html
@@ -1,5 +1,9 @@
 <%inherit file="base.htm"/>
 
+<%block name="title">
+    <title>CHF: Rentals</title>
+  </%block>
+
 <!--nothing to import-->
 
 <%block name="content">
