--- a/test_dmp/homepage/templates/users.edit.html
+++ b/test_dmp/homepage/templates/users.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Users</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit User: ${user.first_name} ${user.last_name}</h2>
