--- a/test_dmp/homepage/templates/users.new.html
+++ b/test_dmp/homepage/templates/users.new.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Create User</title>
+  </%block>
+
 <%block name="content">
 
 <h2>New User:</h2>
