--- a/test_dmp/homepage/templates/welcome.html
+++ b/test_dmp/homepage/templates/welcome.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Welcome!</title>
+  </%block>
+
 <%block name="content">
   <h1>Welcome</h1>
 </%block>
