--- a/test_dmp/homepage/templates/accounts.password.html
+++ b/test_dmp/homepage/templates/accounts.password.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Change Password</title>
+  </%block>
+
 <%block name="content">
 <div id="notification_alert" class="alert alert-success" role="alert"></div>
 
