--- a/test_dmp/homepage/templates/areas.edit.html
+++ b/test_dmp/homepage/templates/areas.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Areas</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit Area: ${area.name}</h2>
