--- a/test_dmp/homepage/templates/authentication.html
+++ b/test_dmp/homepage/templates/authentication.html
@@ -1,5 +1,9 @@
 <%inherit file="base.htm"/>
 
+<%block name="title">
+    <title>CHF: No Authorization</title>
+  </%block>
+
 <%block name="content">
   <h1>Sorry!</h1>
   <p>
