--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -6,10 +6,17 @@
 
 <!DOCTYPE html>
 <html>
-  <meta charset="UTF-8">
+  
+  <%block name="meta">
+    <meta name="" description="" charset="UTF-8">
+  </%block>
+  
   <head>
+  
+  <%block name="title">
+    <title>Colonial Heritage Foundation</title>
+  </%block>
 
-    <title>homepage</title>
 
      ## add any site-wide scripts or CSS here; for example, jquery:
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
