--- a/test_dmp/homepage/templates/festivals.view.html
+++ b/test_dmp/homepage/templates/festivals.view.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Festivals</title>
+  </%block>
+
 <%block name="content">
 	<div id="festivalcontainer">
 		<h2>Festival: ${ events.name } </h2>
