--- a/test_dmp/homepage/templates/orders.html
+++ b/test_dmp/homepage/templates/orders.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Orders</title>
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
