--- a/test_dmp/homepage/templates/overdue.html
+++ b/test_dmp/homepage/templates/overdue.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Overdue Rentals</title>
+  </%block>
+
 <%block name="content">
 <h2>Rented Items Overdue</h2>
 		<table id="manage_table" class = "table table-striped table-bordered">
