--- a/test_dmp/homepage/templates/products.edit.html
+++ b/test_dmp/homepage/templates/products.edit.html
@@ -2,6 +2,10 @@
 
 <!--nothing to import-->
 
+<%block name="title">
+    <title>CHF: Edit Products</title>
+  </%block>
+
 <%block name="content">
 
 <h2>Edit Product: ${ product.category }</h2>
