--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -62,6 +62,7 @@
           <ul class="nav navbar-nav">
             %if request.user.is_authenticated():
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
+            <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
             <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-transfer"></span>  Reports</a></li>
             %else:
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
