--- a/test_dmp/homepage/templates/overdue.html
+++ b/test_dmp/homepage/templates/overdue.html
@@ -9,25 +9,65 @@
 <%block name="content">
 <h2>Rented Items Overdue</h2>
 	<div class = "text-right">
-      <a href ="/homepage/overdue/" class= "btn btn-success">Overdue Emails</a>
+      <a href ="/homepage/overdue.email/" class= "btn btn-success">Batch Email Overdue Rentals</a>
   	</div>
+  	<h3>30 days</h3>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
-		      <th>ID</th>
-		      <th>Condition</th>
+		      <th>Name</th>
 		      <th>Due Date</th>
-		      <th>Late Fee</th>
+		      <th>First Name</th>
+		      <th>Last Name</th>
+		      <th>Email</th>
 		    </tr>
-				%for overdue in overdues:
+				%for overdue in overdue1:
 					<tr>
 			            <td> ${ overdue[0] }</td>
 			            <td> ${ overdue[1] }</td>
+			            <td> ${ overdue[2] }</td>
+			            <td> ${ overdue[3] }</td>
 			            <td> ${ overdue[4] }</td>
-			            <td> $${ overdue[3] }</td>
 					</tr>
 				%endfor
 		</table>
-
+		<h3>60 days</h3>
+		<table id="manage_table" class = "table table-striped table-bordered">
+		    <tr>
+		      <th>Name</th>
+		      <th>Due Date</th>
+		      <th>First Name</th>
+		      <th>Last Name</th>
+		      <th>Email</th>
+		    </tr>
+				%for overdue in overdue2:
+					<tr>
+			            <td> ${ overdue[0] }</td>
+			            <td> ${ overdue[1] }</td>
+			            <td> ${ overdue[2] }</td>
+			            <td> ${ overdue[3] }</td>
+			            <td> ${ overdue[4] }</td>
+					</tr>
+				%endfor
+		</table>
+		<h3>90 days</h3>
+		<table id="manage_table" class = "table table-striped table-bordered">
+		    <tr>
+		      <th>Name</th>
+		      <th>Due Date</th>
+		      <th>First Name</th>
+		      <th>Last Name</th>
+		      <th>Email</th>
+		    </tr>
+				%for overdue in overdue3:
+					<tr>
+			            <td> ${ overdue[0] }</td>
+			            <td> ${ overdue[1] }</td>
+			            <td> ${ overdue[2] }</td>
+			            <td> ${ overdue[3] }</td>
+			            <td> ${ overdue[4] }</td>
+					</tr>
+				%endfor
+		</table>
 
 </%block>
 
