User Story 2, 3 Returns/Damage 2 hours
User Story 2 Rental Return Process, we have completed the process of
doing returns

User Story 3 Damage Handling
On the return there is a place to add damage and to waive the damage
fee.
--Only Question: If we charge the damage fee to credit card, we would
need to do fees waived and check that before charging any fees.

--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -63,6 +63,7 @@
             %if request.user.is_authenticated():
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
             <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
+            <li><a href="/homepage/return"><span class ="glyphicon glyphicon-transfer"></span>  Returns</a></li>
             <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-transfer"></span>  Reports</a></li>
             %else:
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
