User Story 1 Rentals in Shopping Cart
Rentals are in their own tab, when you add it, the shopping cart is the
same one as products, you can delete and checkout as well.

--- a/test_dmp/homepage/templates/itemlist.html
+++ b/test_dmp/homepage/templates/itemlist.html
@@ -7,7 +7,7 @@
 <%block name="content">
 <h2>Items</h2>
 	%for item in items:
-		<div class="item_container">
+		<div class="rental_container">
       <a href="/homepage/itemlist.viewitem/${ item.id }/">
       <div id="item" class="">${ item }</div>
 			<img src="${STATIC_URL}homepage/media/${ item.photo }"/>
@@ -18,7 +18,7 @@
               <div class="col-lg-12">
                 <div class="input-group">
                   <span class="input-group-btn">
-                    <button id="item_${ item.id}" class="btn btn-warning" data-pid="${ item.id}" type="button">Add to Cart</button>
+                    <button id="item_${ item.id}" class="btn btn-warning" data-iid="${ item.id}" type="button">Add to Cart</button>
                   </span>
                 </div><!-- /input-group -->
               </div><!-- /.col-lg-6 -->
