--- a/test_dmp/homepage/templates/itemlist.viewitem.html
+++ b/test_dmp/homepage/templates/itemlist.viewitem.html
@@ -28,7 +28,7 @@
               <div class="col-lg-12">
                 <div class="input-group">
                   <span class="input-group-btn">
-                    <button id="item_${ item.id}" data-pid="${ item.id}" class="btn btn-warning" type="button">Add to Cart</button>
+                    <button id="item_${ item.id}" data-iid="${ item.id}" class="btn btn-warning" type="button">Add to Cart</button>
                   </span>
                 </div><!-- /input-group -->
               </div><!-- /.col-lg-6 -->
