--- a/test_dmp/homepage/templates/login.html
+++ b/test_dmp/homepage/templates/login.html
@@ -9,12 +9,11 @@
 
 <%block name="content">
   <div class = "text-left">
-    <h2>Whoa there Pardner!</h2>
+    <h2>Hold Up!</h2>
   </div>
     <h4>You need to login to continue.</h4>
     <p>Click "My Account" in the top right corner to login or sign up!</p>
     <div align="center">
-      <img height="200" src="${ STATIC_URL}homepage/media/cowboy.gif">
     </div>
 </%block>
 
