--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -67,6 +67,7 @@
             <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-transfer"></span>  Reports</a></li>
             %else:
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
+            <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
             %endif
           </ul>
 
