--- a/test_dmp/homepage/templates/shoppingcart.form.html
+++ b/test_dmp/homepage/templates/shoppingcart.form.html
@@ -19,8 +19,8 @@
           <tr>
             <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ p.photo }" alt=""></td>
             <td>${ p.name }</td>
-            <td>${ cart[str(p.id)] }</td>
-            <td>$ ${ p.current_price * cart[str(p.id)] }</td>
+            <td>${ pcart[str(p.id)] }</td>
+            <td>$ ${ p.current_price * pcart[str(p.id)] }</td>
             <td width="15%" nowrap>
               <a href="/homepage/shoppingcart.delete/${ p.id }/" data-id="${ p.id }" class="btn btn-danger">Remove</a>
             </td>
@@ -41,9 +41,9 @@
         %for key in items:
         <% i = items[key] %>
           <tr>
-            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ p.photo }" alt=""></td>
+            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ i.photo }" alt=""></td>
             <td>${ i.name }</td>
-            <td>$ ${ i.standard_rental_price * cart[str(i.id)] }</td>
+            <td>$ ${ i.standard_rental_price * icart[str(i.id)] }</td>
             <td width="15%" nowrap>
               <a href="/homepage/shoppingcart.delete/${ i.id }/" data-id="${ i.id }" class="btn btn-danger">Remove</a>
             </td>
