--- a/test_dmp/homepage/templates/shoppingcart.html
+++ b/test_dmp/homepage/templates/shoppingcart.html
@@ -2,6 +2,7 @@
 
 <%block name="content">
   <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
+    <h2>Products</h2>
     <table id="manage_table_shopping" class = "table table-striped table-bordered">
       <thead>
         <tr>
@@ -18,16 +19,17 @@
           <tr>
             <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ p.photo }" alt=""></td>
             <td>${ p.name }</td>
-            <td>${ cart[str(p.id)] }</td>
-            <td>$ ${ p.current_price * cart[str(p.id)] }</td>
+            <td>${ pcart[str(p.id)] }</td>
+            <td>$ ${ p.current_price * pcart[str(p.id)] }</td>
             <td width="15%" nowrap>
-              <a href="/homepage/shoppingcart.delete/${ p.id }/" data-id="${ p.id }" class="btn btn-danger">Remove</a>
+              <a href="/homepage/shoppingcart.delete/${ p.id }/product" data-id="${ p.id }" class="btn btn-danger">Remove</a>
             </td>
           </tr>
         %endfor
       </tbody>
   </table>
-   <table id="manage_table_shopping" class = "table table-striped table-bordered">
+  <h2>Items</h2>
+  <table id="manage_table_shopping" class = "table table-striped table-bordered">
       <thead>
         <tr>
           <th>Photo</th>
@@ -40,11 +42,11 @@
         %for key in items:
         <% i = items[key] %>
           <tr>
-            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ p.photo }" alt=""></td>
+            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ i.photo }" alt=""></td>
             <td>${ i.name }</td>
-            <td>$ ${ i.standard_rental_price * cart[str(i.id)] }</td>
+            <td>$ ${ i.standard_rental_price * icart[str(i.id)] }</td>
             <td width="15%" nowrap>
-              <a href="/homepage/shoppingcart.delete/${ i.id }/" data-id="${ i.id }" class="btn btn-danger">Remove</a>
+              <a href="/homepage/shoppingcart.delete/${ i.id }/item" data-id="${ i.id }" class="btn btn-danger">Remove</a>
             </td>
           </tr>
         %endfor
