--- a/test_dmp/homepage/templates/festivals.html
+++ b/test_dmp/homepage/templates/festivals.html
@@ -4,29 +4,29 @@
 
 <%block name="title">
     <title>CHF: Festivals</title>
-  </%block>
+</%block>
 
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Events</h2>
+      <h2>Upcoming Festivals</h2>
     </div>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
 		      <th>Event Name</th>
 		      <th>Start Date</th>
-          <th>End Date</th>
+          	  <th>End Date</th>
 		      <th>Venue Name</th>
-          <th>City</th>
+         	  <th>City</th>
 		      <th>Actions</th>
 		    </tr>
 				%for event in events:
 					<tr>
-            <td> ${ event.name } </td>
+            			<td> ${ event.name } </td>
 						<td> ${ event.start_date } </td>
 						<td> ${ event.end_date } </td>
 						<td> ${ event.venue_name } </td>
-            <td> ${ event.city } </td>
+            			<td> ${ event.city } </td>
 						<td width="1%" nowrap>
 							<a class="label label-info" href="/homepage/festivals.view/${ event.id }/">View</a>
 						</td>
