--- a/test_dmp/homepage/templates/festivals.view.html
+++ b/test_dmp/homepage/templates/festivals.view.html
@@ -37,33 +37,10 @@
 							%endfor 
 					</table>
 
-					<h3>Products</h3>
-
-					<table id="manage_table" class = "table table-striped table-bordered">
-
-					    <tr>
-					      <th>Product Name</th>
-					      <th>Description</th>
-			          	  <th>Place Number</th>
-					      <th>Photo</th>
-					      <th>Actions</th>
-					    </tr>
-							<!--%for  in : -->
-								<tr>
-			            			<td> Hello </td>
-									<td> Word </td>
-									<td> 1 </td>
-									<td> asdf.jpg </td>
-			  						<td width="1%" nowrap>
-										<a class="label label-info" href="/homepage/festivals.view/">View</a>
-									</td>
-								</tr>
-							<!-- %endfor -->
-					</table>
-
+		
 				</div>
 				<div class="col-xs-8 bg-default">
-					<img width= "100%" src="${STATIC_URL}homepage/media/autumn-in-park.jpg"/>
+					<img width= "100%" src="${STATIC_URL}homepage/media/${ events.photo }"/>
 					<h3>Description</h3>
 					<p> ${ events.description } </p>
 				</div>
