User Story 9: REST API 3.5 Hours
I got it all to work, but it goes directly to the receipt page instead
of the credit card charge page. I need to find out why, and this will be
complete.

I am using REST #4

--- a/test_dmp/homepage/templates/festivals.area.html
+++ b/test_dmp/homepage/templates/festivals.area.html
@@ -12,7 +12,7 @@
 		<div class = "container-fluid">
         	<div class="row">
         		<div class="col-xs-12 bg-default">
-					<img width= "100%" src="${STATIC_URL}homepage/media/$ {area.photo"/>
+					<img width= "100%" src="${STATIC_URL}homepage/media/$ {area.photo}"/>
 					<h3>Description</h3>
 				</div>
 			</div>
