--- a/test_dmp/homepage/templates/festivals.item.html
+++ b/test_dmp/homepage/templates/festivals.item.html
@@ -19,13 +19,14 @@
 		    <tr>
 		      <th>Description</th>
 		      <th>Low Price</th>
-		      <th>High Price</th>
-      	 
+          <th>High Price</th>
+		      <th>Artisan</th>
 		    </tr>
 			  <tr>
           <td> ${ saleitem.description } </td>
-          <td> ${ saleitem.low_price } </td>
-		      <td> $${ saleitem.high_price } </td>
+          <td> $${ saleitem.low_price } </td>
+          <td> $${ saleitem.high_price } </td>
+		      <td> ${ user.first_name } ${user.last_name}</td>
          
 			    </tr>
 		</table>
