--- a/test_dmp/homepage/templates/login.loginform.html
+++ b/test_dmp/homepage/templates/login.loginform.html
@@ -13,6 +13,7 @@
       </table>
       <div id="submit_button_container" align="center">
         <button id="submit_button" class="btn btn-warning" type="submit">Login</button>
+        <a href="/homepage/views.password_reset_form">Forgot Password?</a>
       </div>
     </form>
   </div>
