User Story 10 SEO 2 hours
I added title and meta tags to each page, as well as made sure there was
only 1 h1 tag on the page with relevant content. I also made a link page
that has the links to other sites.

--- a/test_dmp/homepage/styles/base.css
+++ b/test_dmp/homepage/styles/base.css
@@ -46,6 +46,11 @@ ul.errorlist > li {
   margin-bottom: 20px;
 }
 
+h1{
+  border-bottom: 1px solid #eee;
+  font-size: 22px;
+}
+
 h2{
   border-bottom: 1px solid #eee;
 }
@@ -82,4 +87,8 @@ a:active {
 
 #festivalproduct {
   display: inline-block;
+}
+
+#link {
+  font-size: 24px
 }
