--- a/test_dmp/homepage/templates/accounts.password.html
+++ b/test_dmp/homepage/templates/accounts.password.html
@@ -6,10 +6,14 @@
     <title>CHF: Change Password</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Chanage Password" description="This page allows a user to change their password" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 <div id="notification_alert" class="alert alert-success" role="alert"></div>
 
-<h2>Change Password For: ${request.user.get_full_name()}</h2>
+<h1>Change Password For: ${request.user.get_full_name()}</h1>
     <span id="message_center"></span><br>
     <span id="message_center1"></span>
 	<form class= "edit_table" method = "POST" >
