--- a/test_dmp/homepage/templates/areas.html
+++ b/test_dmp/homepage/templates/areas.html
@@ -4,12 +4,16 @@
     <title>CHF: Areas</title>
   </%block>
 
+<%block name="meta">
+    <meta name="Areas" description="This is the page for managing areas" charset="UTF-8">
+  </%block>
+
 <!--nothing to import-->
 
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Areas</h2>
+      <h1>Manage Areas</h1>
     </div>
     <div class = "text-right">
       <a href ="/homepage/areas.create/" class= "btn btn-success">Create New Area</a>
