--- a/test_dmp/homepage/templates/authentication.html
+++ b/test_dmp/homepage/templates/authentication.html
@@ -4,6 +4,10 @@
     <title>CHF: No Authorization</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="No Authoriztion" description="This is the page that pops up when the user is not authorized to view a page" charset="UTF-8">
+  </%block>
+
 <%block name="content">
   <h1>Sorry!</h1>
   <p>
