--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -65,9 +65,13 @@
             <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
             <li><a href="/homepage/return"><span class ="glyphicon glyphicon-transfer"></span>  Returns</a></li>
             <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-transfer"></span>  Reports</a></li>
+            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-transfer"></span>  Festivals</a></li>
+            <a href="/homepage/links/">Links</a>
             %else:
             <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
             <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
+            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-transfer"></span>  Festivals</a></li>
+
             %endif
           </ul>
 
@@ -149,7 +153,8 @@
     <footer class = "navbar navbar-inverse navbar-fixed-bottom">
       <div class="container">
         <p class = "navbar-text pull-left">&copy; 2015 Colonial Heritage Foundation</p>
-        <p class = "navbar-text pull-right">Terms of Use | Privacy</p>
+        
+        <p class = "navbar-text pull-right"><a href="/homepage/links/">Links</a> | Terms of Use | Privacy</p>
       </div>
     </footer>
 
