--- a/test_dmp/homepage/templates/events.html
+++ b/test_dmp/homepage/templates/events.html
@@ -6,10 +6,14 @@
     <title>CHF: Events</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Events" description="Page for managing events" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Events</h2>
+      <h1>Manage Events</h1>
     </div>
     <div class = "text-right">
       <a href ="/homepage/events.create/" class= "btn btn-success">Create New Event</a>
