--- a/test_dmp/homepage/templates/festivals.area.html
+++ b/test_dmp/homepage/templates/festivals.area.html
@@ -6,9 +6,13 @@
     <title>CHF: Festival Areas</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Festival Areas" description="People can view areas and festivals" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 	<div id="festivalcontainer">
-		<h2>Area </h2>
+		<h1>Area </h1>
 		<div class = "container-fluid">
         	<div class="row">
         		<div class="col-xs-12 bg-default">
