--- a/test_dmp/homepage/templates/festivals.html
+++ b/test_dmp/homepage/templates/festivals.html
@@ -6,10 +6,14 @@
     <title>CHF: Festivals</title>
 </%block>
 
+<%block name="meta">
+    <meta name="Festivals" description="People can view information about festivals" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Upcoming Festivals</h2>
+      <h1>Upcoming Festivals</h1>
     </div>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
