--- a/test_dmp/homepage/templates/festivals.item.html
+++ b/test_dmp/homepage/templates/festivals.item.html
@@ -4,12 +4,16 @@
     <title>CHF: Sale Item Detail</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Sale Items" description="Customers can view info about sale items here" charset="UTF-8">
+  </%block>
+
 <%block name="jumbotron">
 </%block>
 
 <%block name="content">
 <div class = "text-left">
-      <h2>Sale Item Detail - ${ saleitem.name }</h2>
+      <h1>Sale Item Detail - ${ saleitem.name }</h1>
     </div>
 
     <div align="center">
