--- a/test_dmp/homepage/templates/festivals.view.html
+++ b/test_dmp/homepage/templates/festivals.view.html
@@ -6,9 +6,13 @@
     <title>CHF: Festivals</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Festivals" description="The different festivals one can attend" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 	<div id="festivalcontainer">
-		<h2>Festival: ${ events.name } </h2>
+		<h1>Festival: ${ events.name } </h1>
 		<div class = "container-fluid">
         	<div class="row">
         		<div class="col-xs-4 bg-default">
