--- a/test_dmp/homepage/templates/itemlist.viewitem.html
+++ b/test_dmp/homepage/templates/itemlist.viewitem.html
@@ -4,12 +4,16 @@
     <title>CHF: Item Detail</title>
   </%block>
 
+<%block name="meta">
+    <meta name="Items" description="View details about items" charset="UTF-8">
+  </%block>
+
 <%block name="jumbotron">
 </%block>
 
 <%block name="content">
 <div class = "text-left">
-      <h2>Item Detail - ${ item.name }</h2>
+      <h1>Item Detail - ${ item.name }</h1>
     </div>
 
     <div align="center">
