--- a/test_dmp/homepage/templates/login.html
+++ b/test_dmp/homepage/templates/login.html
@@ -7,9 +7,13 @@
     <title>CHF: Login</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Login" description="User needs to log in to continue" charset="UTF-8">
+  </%block>
+
 <%block name="content">
   <div class = "text-left">
-    <h2>Hold Up!</h2>
+    <h1>Hold Up!</h1>
   </div>
     <h4>You need to login to continue.</h4>
     <p>Click "My Account" in the top right corner to login or sign up!</p>
