--- a/test_dmp/homepage/templates/login.loginform.html
+++ b/test_dmp/homepage/templates/login.loginform.html
@@ -6,6 +6,10 @@
     <title>CHF: Login</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Login" description="Users can log in here" charset="UTF-8">
+  </%block>
+
   <div id= "loginform_container" align="center">
     <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
       <table>
@@ -13,7 +17,7 @@
       </table>
       <div id="submit_button_container" align="center">
         <button id="submit_button" class="btn btn-warning" type="submit">Login</button>
-        <a href="/homepage/views.password_reset_form">Forgot Password?</a>
+        <a href="/password_reset/">Forgot Password?</a>
       </div>
     </form>
   </div>
