--- a/test_dmp/homepage/templates/overdue.html
+++ b/test_dmp/homepage/templates/overdue.html
@@ -6,8 +6,12 @@
     <title>CHF: Overdue Rentals</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Overdue Rentals" description="Info about overdue rentals can be found here" charset="UTF-8">
+  </%block>
+
 <%block name="content">
-<h2>Rented Items Overdue</h2>
+<h1>Rented Items Overdue</h1>
 	<div class = "text-right">
       <a href ="/homepage/overdue.email/" class= "btn btn-success">Batch Email Overdue Rentals</a>
   	</div>
