--- a/test_dmp/homepage/templates/productlist.viewproduct.html
+++ b/test_dmp/homepage/templates/productlist.viewproduct.html
@@ -4,12 +4,16 @@
     <title>CHF: Product Detail</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Products" description="Management page for products" charset="UTF-8">
+  </%block>
+
 <%block name="jumbotron">
 </%block>
 
 <%block name="content">
 <div class = "text-left">
-      <h2>Product Detail - ${ product.name }</h2>
+      <h1>Product Detail - ${ product.name }</h1>
     </div>
 
     <div align="center">
