--- a/test_dmp/homepage/templates/rentals.html
+++ b/test_dmp/homepage/templates/rentals.html
@@ -4,12 +4,16 @@
     <title>CHF: Rentals</title>
   </%block>
 
+<%block name="meta">
+    <meta name="rentals" description="Management page for rentals" charset="UTF-8">
+  </%block>
+
 <!--nothing to import-->
 
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Rentals</h2>
+      <h1>Manage Rentals</h1>
     </div>
     <div class = "text-right">
       <a href ="/homepage/rentals.create/" class= "btn btn-success">Create New Rental</a>
