--- a/test_dmp/homepage/templates/reset.email.html
+++ b/test_dmp/homepage/templates/reset.email.html
@@ -6,12 +6,17 @@
     <title>CHF: Receipt</title>
   </%block>
 
+    <%block name="meta">
+    <meta name="Shopping Cart" description="Shopping Cart" charset="UTF-8">
+  </%block>
+
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
       <h2>Thank You!</h2>
     </div>
-    <p>Your purchase has been recorded and will be shipping soon!</p>
+    <p>You have been sent an email with instructions to change your password</p>
 </%block>
 
 <%block name="jumbotron">
