--- a/test_dmp/homepage/templates/shoppingcart.html
+++ b/test_dmp/homepage/templates/shoppingcart.html
@@ -1,5 +1,13 @@
 <%inherit file="base_ajax.htm" />
 
+<%block name="title">
+    <title>CHF: Shopping Cart</title>
+  </%block>
+
+  <%block name="meta">
+    <meta name="Shopping Cart" description="Shopping Cart" charset="UTF-8">
+  </%block>
+
 <%block name="content">
   <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
     <h2>Products</h2>
