--- a/test_dmp/homepage/templates/users.new.html
+++ b/test_dmp/homepage/templates/users.new.html
@@ -6,9 +6,13 @@
     <title>CHF: Create User</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Create User" description="Create page for users" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 
-<h2>New User:</h2>
+<h1>New User:</h1>
 	<form class= "edit_table" method = "POST" >
 
 		## <table id="edit_form">
