--- a/test_dmp/homepage/templates/accounts.html
+++ b/test_dmp/homepage/templates/accounts.html
@@ -6,10 +6,14 @@
     <title>CHF: Accounts</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Account" description="This is the account managementpage" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Account</h2>
+      <h1>Manage Account</h1>
     </div>
 
 		<table id="manage_table" class = "table table-striped table-bordered">
