--- a/test_dmp/homepage/templates/checkout.receipt.html
+++ b/test_dmp/homepage/templates/checkout.receipt.html
@@ -6,10 +6,14 @@
     <title>CHF: Receipt</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Receipt" description="Customers get a receipt upon checkout" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Thank You!</h2>
+      <h1>Thank You!</h1>
     </div>
     <p>Your purchase has been recorded and will be shipping soon!</p>
 </%block>
