--- a/test_dmp/homepage/templates/logout.html
+++ b/test_dmp/homepage/templates/logout.html
@@ -6,10 +6,14 @@
     <title>CHF: Log Out</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Logout" description="Users redirected here on logout" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 
   <div class = "text-left">
-    <h2>Logout</h2>
+    <h1>Logout</h1>
   </div>
   <p>You were successfully logged out.</p>
 
