--- a/test_dmp/homepage/templates/orders.html
+++ b/test_dmp/homepage/templates/orders.html
@@ -6,10 +6,14 @@
     <title>CHF: Orders</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Orders" description="Managers can manage orders here" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Orders</h2>
+      <h1>Manage Orders</h1>
     </div>
     <div class = "text-right">
       <a href ="/homepage/orders.create/" class= "btn btn-success">Create New Order</a>
