--- a/test_dmp/homepage/templates/products.html
+++ b/test_dmp/homepage/templates/products.html
@@ -6,10 +6,14 @@
     <title>CHF: Product</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Products" description="Management page for products" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Manage Products</h2>
+      <h1>Manage Products</h1>
     </div>
     <div class = "text-right">
       <a href ="/homepage/products.create/" class= "btn btn-success">Create New Product</a>
