--- a/test_dmp/homepage/templates/reset.password.html
+++ b/test_dmp/homepage/templates/reset.password.html
@@ -3,13 +3,18 @@
 <!--nothing to import-->
 
 <%block name="title">
-    <title>CHF: Change Password</title>
+    <title>CHF: Reset Password</title>
   </%block>
+
+    <%block name="meta">
+    <meta name="Reset Password" description="Reset Password" charset="UTF-8">
+  </%block>
+
 
 <%block name="content">
 <div id="notification_alert" class="alert alert-success" role="alert"></div>
 
-<h2>Change Password For: ${request.user.get_full_name()}</h2>
+<h1>Reset Password </h1>
     <span id="message_center"></span><br>
     <span id="message_center1"></span>
 	<form class= "edit_table" method = "POST" >
@@ -25,7 +30,7 @@
   ##   	%endfor
 				<hr>
 				<button id="submit_button" class="btn btn-success" type="submit">Submit</button>
-				<a class="btn btn-default" href="/homepage/">Cancel</a>
+				<a class="btn btn-default" href="/homepage/accounts">Cancel</a>
 	</form>
 </%block>
 
