--- a/test_dmp/homepage/templates/return.edit.html
+++ b/test_dmp/homepage/templates/return.edit.html
@@ -6,9 +6,14 @@
     <title>CHF: Return Item</title>
   </%block>
 
+    <%block name="meta">
+    <meta name="Edit a Return" description="Edit Return info" charset="UTF-8">
+  </%block>
+
+
 <%block name="content">
 
-<h2>Return: </h2>
+<h1>Return: </h1>
 	<form class= "edit_table" method = "POST" >
 
 		## <table id="edit_form">
