--- a/test_dmp/homepage/templates/return.html
+++ b/test_dmp/homepage/templates/return.html
@@ -4,12 +4,16 @@
     <title>CHF: Returns</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Returns" description="Process a return for an item" charset="UTF-8">
+  </%block>
+
 <!--nothing to import-->
 
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Return an Item</h2>
+      <h1>Return an Item</h1>
     </div>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
