--- a/test_dmp/homepage/templates/shoppingcart.form.html
+++ b/test_dmp/homepage/templates/shoppingcart.form.html
@@ -1,8 +1,17 @@
 <%inherit file="base.htm" />
 
+<%block name="title">
+    <title>CHF: Shopping Cart</title>
+  </%block>
+
+  <%block name="meta">
+    <meta name="Shopping Cart" description="Shopping Cart" charset="UTF-8">
+  </%block>
+
+  
 <%block name="content">
   <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
-  <h2>Shopping Cart</h2>
+  <h1>Shopping Cart</h1>
     <table id="manage_table_shopping" class = "table table-striped table-bordered">
       <thead>
         <tr>
