--- a/test_dmp/homepage/templates/success.html
+++ b/test_dmp/homepage/templates/success.html
@@ -6,10 +6,14 @@
     <title>CHF: Email Success</title>
   </%block>
 
+  <%block name="meta">
+    <meta name="Email" description="Email page denoting successfully sent emails" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
-      <h2>Emails Successfully Sent</h2>
+      <h1>Emails Successfully Sent</h1>
     </div>
     <h3>Overdue Rentals</h3>
 
