--- a/test_dmp/homepage/templates/users.html
+++ b/test_dmp/homepage/templates/users.html
@@ -6,6 +6,10 @@
     <title>CHF: Users</title>
   </%block>
 
+<%block name="meta">
+    <meta name="Products" description="Management page for products" charset="UTF-8">
+  </%block>
+
 <%block name="content">
 		<!--create the table-->
     <div class = "text-left">
