Patch Up Work 2 hours
I worked on making the shopping cart be viewable in the email. It is
hard with Mako to do that, so I made a link to the localhost page
instead of hard coding it.

Then I touched up festivals, so that areas have pictures. And worked on
styling a little bit.

--- a/test_dmp/homepage/templates/festivals.area.html
+++ b/test_dmp/homepage/templates/festivals.area.html
@@ -12,12 +12,13 @@
 
 <%block name="content">
 	<div id="festivalcontainer">
-		<h1>Area </h1>
+		<h1>Area: ${ areas.name } </h1>
 		<div class = "container-fluid">
         	<div class="row">
         		<div class="col-xs-12 bg-default">
-					<img width= "100%" src="${STATIC_URL}homepage/media/$ {area.photo}"/>
+					<img width= "100%" src="${STATIC_URL}homepage/media/${ areas.photo }"/>
 					<h3>Description</h3>
+					<p>${ areas.description }</p>
 				</div>
 			</div>
 			<div class="row">
