--- a/test_dmp/homepage/templates/festivals.view.html
+++ b/test_dmp/homepage/templates/festivals.view.html
@@ -33,7 +33,7 @@
 			            			<td> ${ area.name } </td>
 			            			<td> ${ area.description } </td>
 			            			<td> ${ area.place_number } </td>
-			            			<td> ${ area.photo } </td>
+			            			<td> <img width= "100%" src="${STATIC_URL}homepage/media/${ area.photo }"/> </td>
 			  						<td width="1%" nowrap>
 										<a class="label label-info" href="/homepage/festivals.area/${ area.id }">View</a>
 									</td>
