--- a/test_dmp/homepage/templates/overdue.html
+++ b/test_dmp/homepage/templates/overdue.html
@@ -18,7 +18,7 @@
   	<h3>30 days</h3>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
-		      <th>Name</th>
+		      <th>Item Name</th>
 		      <th>Due Date</th>
 		      <th>First Name</th>
 		      <th>Last Name</th>
@@ -37,7 +37,7 @@
 		<h3>60 days</h3>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
-		      <th>Name</th>
+		      <th>Item Name</th>
 		      <th>Due Date</th>
 		      <th>First Name</th>
 		      <th>Last Name</th>
@@ -56,7 +56,7 @@
 		<h3>90 days</h3>
 		<table id="manage_table" class = "table table-striped table-bordered">
 		    <tr>
-		      <th>Name</th>
+		      <th>Item Name</th>
 		      <th>Due Date</th>
 		      <th>First Name</th>
 		      <th>Last Name</th>
