--- a/test_dmp/homepage/templates/checkout.receipt.html
+++ b/test_dmp/homepage/templates/checkout.receipt.html
@@ -16,6 +16,58 @@
       <h1>Thank You!</h1>
     </div>
     <p>Your purchase has been recorded and will be shipping soon!</p>
+    <p>You have been sent an email with details of this transaction.</p>
+
+    <form id= "loginform" method ="POST" action="/homepage/login.loginform/">
+  <h1>Shopping Cart</h1>
+    <table id="manage_table_shopping" class = "table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Photo</th>
+          <th>Product Name</th>
+          <th>Quantity</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        %for key in products:
+        <% p = products[key] %>
+          <tr>
+            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ p.photo }" alt=""></td>
+            <td>${ p.name }</td>
+            <td>${ pcart[str(p.id)] }</td>
+            <td>$ ${ p.current_price * pcart[str(p.id)] }</td>
+          </tr>
+        %endfor
+      </tbody>
+  </table>
+  <table id="manage_table_shopping" class = "table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Photo</th>
+          <th>Item Name</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        %for key in items:
+        <% i = items[key] %>
+          <tr>
+            <td><img class="text-center" height="75" src="${STATIC_URL}homepage/media/${ i.photo }" alt=""></td>
+            <td>${ i.name }</td>
+            <td>$ ${ i.standard_rental_price * icart[str(i.id)] }</td>
+          </tr>
+        %endfor
+      </tbody>
+  </table>
+
+  <div id="Total" class="pull-right">
+  <h4>Total Amount: $${ amount }</h4>
+  </div>
+    <div class="btn-group">
+    </div>
+  </form>
+
 </%block>
 
 <%block name="jumbotron">
