--- a/test_dmp/homepage/templates/base.htm
+++ b/test_dmp/homepage/templates/base.htm
@@ -61,15 +61,15 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             %if request.user.is_authenticated():
-            <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
+            <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-tag"></span>  Products</a></li>
             <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
             <li><a href="/homepage/return"><span class ="glyphicon glyphicon-transfer"></span>  Returns</a></li>
-            <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-transfer"></span>  Reports</a></li>
-            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-transfer"></span>  Festivals</a></li>
+            <li><a href="/homepage/overdue"><span class ="glyphicon glyphicon-list-alt"></span>  Reports</a></li>
+            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-tree-conifer"></span>  Festivals</a></li>
             %else:
-            <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-list"></span>  Products</a></li>
+            <li><a href="/homepage/productlist"><span class ="glyphicon glyphicon-tag"></span>  Products</a></li>
             <li><a href="/homepage/itemlist"><span class ="glyphicon glyphicon-list"></span>  Rentals</a></li>
-            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-transfer"></span>  Festivals</a></li>
+            <li><a href="/homepage/festivals"><span class ="glyphicon glyphicon-tree-conifer"></span>  Festivals</a></li>
 
             %endif
           </ul>
